syntax = "proto3";
package fusionchain.identity;

import "gogoproto/gogo.proto";
import "fusionchain/identity/params.proto";

option go_package = "gitlab.qredo.com/qrdochain/fusionchain/x/identity/types";

// GenesisState defines the identity module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
}
