import { GeneratedType } from "@cosmjs/proto-signing";
import { MsgUpdateKeychain } from "./types/warden/warden/v1beta1/tx";
import { MsgNewSignatureRequestResponse } from "./types/warden/warden/v1beta1/tx";
import { MetadataEthereum } from "./types/warden/warden/v1beta1/tx";
import { QueryKeychainByAddressRequest } from "./types/warden/warden/v1beta1/query";
import { MsgFulfilSignatureRequest } from "./types/warden/warden/v1beta1/tx";
import { MsgNewSignTransactionRequestResponse } from "./types/warden/warden/v1beta1/tx";
import { Keychain } from "./types/warden/warden/v1beta1/keychain";
import { KeychainFees } from "./types/warden/warden/v1beta1/keychain";
import { MsgAddKeychainParty } from "./types/warden/warden/v1beta1/tx";
import { MsgSignedData } from "./types/warden/warden/v1beta1/tx";
import { GenesisState } from "./types/warden/warden/v1beta1/genesis";
import { QueryKeyRequestByIdResponse } from "./types/warden/warden/v1beta1/query";
import { QueryKeysResponse } from "./types/warden/warden/v1beta1/query";
import { QuerySignTransactionRequestByIdResponse } from "./types/warden/warden/v1beta1/query";
import { SignRequest } from "./types/warden/warden/v1beta1/signature";
import { QueryParamsResponse } from "./types/warden/warden/v1beta1/query";
import { QueryKeychainByAddressResponse } from "./types/warden/warden/v1beta1/query";
import { MsgUpdateParamsResponse } from "./types/warden/warden/v1beta1/tx";
import { MsgRemoveSpaceOwner } from "./types/warden/warden/v1beta1/tx";
import { MsgNewKey } from "./types/warden/warden/v1beta1/tx";
import { MsgNewSignTransactionRequest } from "./types/warden/warden/v1beta1/tx";
import { QueryParamsRequest } from "./types/warden/warden/v1beta1/query";
import { QuerySignatureRequestsResponse } from "./types/warden/warden/v1beta1/query";
import { SignTransactionRequestResponse } from "./types/warden/warden/v1beta1/query";
import { MsgNewSpaceResponse } from "./types/warden/warden/v1beta1/tx";
import { MsgNewSignatureRequest } from "./types/warden/warden/v1beta1/tx";
import { QuerySpacesByOwnerRequest } from "./types/warden/warden/v1beta1/query";
import { QueryKeychainsRequest } from "./types/warden/warden/v1beta1/query";
import { QuerySpaceByAddressRequest } from "./types/warden/warden/v1beta1/query";
import { MsgAddKeychainPartyResponse } from "./types/warden/warden/v1beta1/tx";
import { QuerySpacesRequest } from "./types/warden/warden/v1beta1/query";
import { QueryKeysRequest } from "./types/warden/warden/v1beta1/query";
import { QuerySignTransactionRequestsResponse } from "./types/warden/warden/v1beta1/query";
import { SignTransactionRequest } from "./types/warden/warden/v1beta1/signature";
import { Space } from "./types/warden/warden/v1beta1/space";
import { MsgNewSpace } from "./types/warden/warden/v1beta1/tx";
import { MsgNewKeychainResponse } from "./types/warden/warden/v1beta1/tx";
import { QuerySpacesResponse } from "./types/warden/warden/v1beta1/query";
import { QueryKeychainsResponse } from "./types/warden/warden/v1beta1/query";
import { QuerySpaceByAddressResponse } from "./types/warden/warden/v1beta1/query";
import { WalletKeyResponse } from "./types/warden/warden/v1beta1/query";
import { MsgAddSpaceOwner } from "./types/warden/warden/v1beta1/tx";
import { MsgUpdateKeyRequestResponse } from "./types/warden/warden/v1beta1/tx";
import { QuerySignTransactionRequestByIdRequest } from "./types/warden/warden/v1beta1/query";
import { MsgNewKeychain } from "./types/warden/warden/v1beta1/tx";
import { KeyRequest } from "./types/warden/warden/v1beta1/key";
import { QuerySignatureRequestsRequest } from "./types/warden/warden/v1beta1/query";
import { QuerySignTransactionRequestsRequest } from "./types/warden/warden/v1beta1/query";
import { MsgUpdateSpace } from "./types/warden/warden/v1beta1/tx";
import { MsgNewKeyRequestResponse } from "./types/warden/warden/v1beta1/tx";
import { MsgUpdateKeyRequest } from "./types/warden/warden/v1beta1/tx";
import { Key } from "./types/warden/warden/v1beta1/key";
import { QueryKeyRequestsRequest } from "./types/warden/warden/v1beta1/query";
import { MsgNewKeyRequest } from "./types/warden/warden/v1beta1/tx";
import { MsgFulfilSignatureRequestResponse } from "./types/warden/warden/v1beta1/tx";
import { MsgUpdateParams } from "./types/warden/warden/v1beta1/tx";
import { MsgAddSpaceOwnerResponse } from "./types/warden/warden/v1beta1/tx";
import { MsgUpdateKeychainResponse } from "./types/warden/warden/v1beta1/tx";
import { Params } from "./types/warden/warden/v1beta1/params";
import { QuerySignatureRequestByIdResponse } from "./types/warden/warden/v1beta1/query";
import { MsgRemoveSpaceOwnerResponse } from "./types/warden/warden/v1beta1/tx";
import { QueryKeyRequestsResponse } from "./types/warden/warden/v1beta1/query";
import { QueryKeyRequestByIdRequest } from "./types/warden/warden/v1beta1/query";
import { KeyResponse } from "./types/warden/warden/v1beta1/query";
import { QuerySignatureRequestByIdRequest } from "./types/warden/warden/v1beta1/query";
import { MsgUpdateSpaceResponse } from "./types/warden/warden/v1beta1/tx";

const msgTypes: Array<[string, GeneratedType]>  = [
    ["/warden.warden.v1beta1.MsgUpdateKeychain", MsgUpdateKeychain],
    ["/warden.warden.v1beta1.MsgNewSignatureRequestResponse", MsgNewSignatureRequestResponse],
    ["/warden.warden.v1beta1.MetadataEthereum", MetadataEthereum],
    ["/warden.warden.v1beta1.QueryKeychainByAddressRequest", QueryKeychainByAddressRequest],
    ["/warden.warden.v1beta1.MsgFulfilSignatureRequest", MsgFulfilSignatureRequest],
    ["/warden.warden.v1beta1.MsgNewSignTransactionRequestResponse", MsgNewSignTransactionRequestResponse],
    ["/warden.warden.v1beta1.Keychain", Keychain],
    ["/warden.warden.v1beta1.KeychainFees", KeychainFees],
    ["/warden.warden.v1beta1.MsgAddKeychainParty", MsgAddKeychainParty],
    ["/warden.warden.v1beta1.MsgSignedData", MsgSignedData],
    ["/warden.warden.v1beta1.GenesisState", GenesisState],
    ["/warden.warden.v1beta1.QueryKeyRequestByIdResponse", QueryKeyRequestByIdResponse],
    ["/warden.warden.v1beta1.QueryKeysResponse", QueryKeysResponse],
    ["/warden.warden.v1beta1.QuerySignTransactionRequestByIdResponse", QuerySignTransactionRequestByIdResponse],
    ["/warden.warden.v1beta1.SignRequest", SignRequest],
    ["/warden.warden.v1beta1.QueryParamsResponse", QueryParamsResponse],
    ["/warden.warden.v1beta1.QueryKeychainByAddressResponse", QueryKeychainByAddressResponse],
    ["/warden.warden.v1beta1.MsgUpdateParamsResponse", MsgUpdateParamsResponse],
    ["/warden.warden.v1beta1.MsgRemoveSpaceOwner", MsgRemoveSpaceOwner],
    ["/warden.warden.v1beta1.MsgNewKey", MsgNewKey],
    ["/warden.warden.v1beta1.MsgNewSignTransactionRequest", MsgNewSignTransactionRequest],
    ["/warden.warden.v1beta1.QueryParamsRequest", QueryParamsRequest],
    ["/warden.warden.v1beta1.QuerySignatureRequestsResponse", QuerySignatureRequestsResponse],
    ["/warden.warden.v1beta1.SignTransactionRequestResponse", SignTransactionRequestResponse],
    ["/warden.warden.v1beta1.MsgNewSpaceResponse", MsgNewSpaceResponse],
    ["/warden.warden.v1beta1.MsgNewSignatureRequest", MsgNewSignatureRequest],
    ["/warden.warden.v1beta1.QuerySpacesByOwnerRequest", QuerySpacesByOwnerRequest],
    ["/warden.warden.v1beta1.QueryKeychainsRequest", QueryKeychainsRequest],
    ["/warden.warden.v1beta1.QuerySpaceByAddressRequest", QuerySpaceByAddressRequest],
    ["/warden.warden.v1beta1.MsgAddKeychainPartyResponse", MsgAddKeychainPartyResponse],
    ["/warden.warden.v1beta1.QuerySpacesRequest", QuerySpacesRequest],
    ["/warden.warden.v1beta1.QueryKeysRequest", QueryKeysRequest],
    ["/warden.warden.v1beta1.QuerySignTransactionRequestsResponse", QuerySignTransactionRequestsResponse],
    ["/warden.warden.v1beta1.SignTransactionRequest", SignTransactionRequest],
    ["/warden.warden.v1beta1.Space", Space],
    ["/warden.warden.v1beta1.MsgNewSpace", MsgNewSpace],
    ["/warden.warden.v1beta1.MsgNewKeychainResponse", MsgNewKeychainResponse],
    ["/warden.warden.v1beta1.QuerySpacesResponse", QuerySpacesResponse],
    ["/warden.warden.v1beta1.QueryKeychainsResponse", QueryKeychainsResponse],
    ["/warden.warden.v1beta1.QuerySpaceByAddressResponse", QuerySpaceByAddressResponse],
    ["/warden.warden.v1beta1.WalletKeyResponse", WalletKeyResponse],
    ["/warden.warden.v1beta1.MsgAddSpaceOwner", MsgAddSpaceOwner],
    ["/warden.warden.v1beta1.MsgUpdateKeyRequestResponse", MsgUpdateKeyRequestResponse],
    ["/warden.warden.v1beta1.QuerySignTransactionRequestByIdRequest", QuerySignTransactionRequestByIdRequest],
    ["/warden.warden.v1beta1.MsgNewKeychain", MsgNewKeychain],
    ["/warden.warden.v1beta1.KeyRequest", KeyRequest],
    ["/warden.warden.v1beta1.QuerySignatureRequestsRequest", QuerySignatureRequestsRequest],
    ["/warden.warden.v1beta1.QuerySignTransactionRequestsRequest", QuerySignTransactionRequestsRequest],
    ["/warden.warden.v1beta1.MsgUpdateSpace", MsgUpdateSpace],
    ["/warden.warden.v1beta1.MsgNewKeyRequestResponse", MsgNewKeyRequestResponse],
    ["/warden.warden.v1beta1.MsgUpdateKeyRequest", MsgUpdateKeyRequest],
    ["/warden.warden.v1beta1.Key", Key],
    ["/warden.warden.v1beta1.QueryKeyRequestsRequest", QueryKeyRequestsRequest],
    ["/warden.warden.v1beta1.MsgNewKeyRequest", MsgNewKeyRequest],
    ["/warden.warden.v1beta1.MsgFulfilSignatureRequestResponse", MsgFulfilSignatureRequestResponse],
    ["/warden.warden.v1beta1.MsgUpdateParams", MsgUpdateParams],
    ["/warden.warden.v1beta1.MsgAddSpaceOwnerResponse", MsgAddSpaceOwnerResponse],
    ["/warden.warden.v1beta1.MsgUpdateKeychainResponse", MsgUpdateKeychainResponse],
    ["/warden.warden.v1beta1.Params", Params],
    ["/warden.warden.v1beta1.QuerySignatureRequestByIdResponse", QuerySignatureRequestByIdResponse],
    ["/warden.warden.v1beta1.MsgRemoveSpaceOwnerResponse", MsgRemoveSpaceOwnerResponse],
    ["/warden.warden.v1beta1.QueryKeyRequestsResponse", QueryKeyRequestsResponse],
    ["/warden.warden.v1beta1.QueryKeyRequestByIdRequest", QueryKeyRequestByIdRequest],
    ["/warden.warden.v1beta1.KeyResponse", KeyResponse],
    ["/warden.warden.v1beta1.QuerySignatureRequestByIdRequest", QuerySignatureRequestByIdRequest],
    ["/warden.warden.v1beta1.MsgUpdateSpaceResponse", MsgUpdateSpaceResponse],
    
];

export { msgTypes }